--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Install Wrangler
         run: npm i -g wrangler
 
-      - name: Publish with Wrangler
+      - name: Deploy with Wrangler
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-        run: wrangler publish 
+        run: wrangler deploy 
