fix build issues

--- a/server/wrangler.toml
+++ b/server/wrangler.toml
@@ -9,7 +9,7 @@ bindings = [
 
 [[migrations]]
 tag = "v1"
-new_classes = ["RoomDurableObject"]
+new_sqlite_classes = ["RoomDurableObject"]
 
 [vars]
 # Comma-separated list of allowed origins for CORS and WS Origin checks
